# AutoScript

./: .gitignore  AutoScript_功能说明.md  README.md  main.py  pyproject.toml  requirements.txt  启动说明.md
AutoScript/: main.py  pyproject.toml  requirements.txt
AutoScript/configs/: config.yaml
AutoScript/core/: __init__.py  config_manager.py  engine.py  game_manager.py  ocr_engine.py  plugin_manager.py  script_executor.py  script_queue.py  template_matcher.py
AutoScript/plugins/: __init__.py  scrcpy_plugin.py
AutoScript/web/: app.py
AutoScript/web/templates/: index.html
configs/: config.yaml
core/: __init__.py  config_manager.py  engine.py  ocr_engine.py  plugin_manager.py  script_queue.py  template_matcher.py
plugins/: __init__.py  playwright_plugin.py  scrcpy_plugin.py  windows_plugin.py
web/: app.py
web-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-ui/src/: App.tsx  index.css
web-ui/src/components/Dashboard/: index.tsx
web-ui/src/components/Layout/: index.tsx
web-ui/src/components/PluginManager/: index.tsx
web-ui/src/components/ScriptManager/: index.tsx
web-ui/src/components/Settings/: index.tsx
web-ui/src/components/SystemStatus/: index.tsx
web-ui/src/components/Toolbox/: index.tsx
web-ui/src/services/: api.ts  socket.ts
web-ui/src/types/: index.ts
web/templates/: index.html
