[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoscript"
version = "2.0.0"
description = "游戏自动化脚本管理系统"
authors = [
    {name = "AutoScript Team", email = "team@autoscript.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "pyyaml>=6.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "werkzeug>=2.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=5.0",
    "mypy>=1.0"
]

[project.urls]
Homepage = "https://github.com/autoscript/autoscript"
Repository = "https://github.com/autoscript/autoscript"
Documentation = "https://docs.autoscript.com"
Issues = "https://github.com/autoscript/autoscript/issues"

[project.scripts]
autoscript = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "plugins*", "web*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true